--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -7,3 +7,14 @@
     font-family: 'Manrope', sans-serif;
   }
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+}
+
+input:-webkit-autofill{
+  -webkit-text-fill-color: white !important;
+}
