--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -50,3 +50,27 @@ input:-webkit-autofill{
 .appearing-turn-7 { transition-delay: 0.75s; }
 .appearing-turn-8 { transition-delay: 0.875s; }
 .appearing-turn-9 { transition-delay: 1s; }
+
+/* @keyframes breathe {
+  0% {
+    background: rgba(0, 0, 0, 0.0);
+  }
+  50% {
+    background: rgba(203, 114, 255, 0.2);
+  }
+  100% {
+    background: rgba(0, 0, 0, 0.0);
+  }
+} */
+
+.enhanced-token {
+  border-radius: 0.5rem;
+  display: inline-block;
+  font-weight: bold;
+  padding: 0 0.25rem;
+  transition: all 0.5s;
+}
+
+.enhanced-token:hover {
+  background: rgba(203, 114, 255, 0.2);
+}
