--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -36,13 +36,13 @@ input:-webkit-autofill{
 
 .left-appearing {
   opacity: 0;
-  transform: translateX(-20px);
+  /* transform: translateX(-20px); */
   transition: all 0.5s ease-in-out;
 }
 
 .left-appearing[data-is-visible="true"] {
   opacity: 1;
-  transform: translateX(0);
+  /* transform: translateX(0); */
 }
 
 .appearing-turn-1 { transition-delay: 0s; }
